--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -5,3 +5,13 @@
     year = {1988},
     publisher = {Springer-Verlag New York}
 }
+@misc{simplicialNN,
+    title={Simplicial Neural Networks}, 
+    author={S. Ebli and M. Defferrard and G. Spreemann},
+    year={2020}
+}
+@misc{DEC,
+    title={Discrete Exterior Calculus}, 
+    author={M. Desbrun and A. N. Hirani and M. Leok and J. E. Marsden},
+    year={2005}
+}
