--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -4,9 +4,10 @@
     \begin{section}{Simplicial complexes} 
         \subfile{sections/1/1}    
     \end{section}
-    \begin{section}{Forms and integration on abstract simplicial complexes}
+    \begin{section}{Simplicial chains and cochains}
         \subfile{sections/1/2}    
     \end{section}
-    \begin{section}{The Laplace Operator}
+    \begin{section}{Laplacian operators}
+        \subfile{sections/1/3} 
     \end{section}
 \end{document}
