--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -18,7 +18,7 @@
         \[ [ x_i ]_{i \in I} := \{ \sum_{i \in I} \lambda_i x_i : \lambda_i \in \R,\ \lambda_i \geq 0,\  \sum_{i \in I} \lambda_i = 1 \}.\]
     \end{defn}
 
-    It is easy to see that compact envelopes are convex and compact sets with respect to the standard topology in $\R^n$.
+    It is easy to see that convex envelopes are convex and compact sets with respect to the standard topology in $\R^n$.
     From now, if not otherwise specified, we shall assume $I$ to be a finite set of indexes.
 
     \begin{prop}
