--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -19,7 +19,7 @@
 \usepackage{subfiles}
 \usepackage{comment}
 \usepackage{enumerate}
-\usepackage[style=numeric, backend=biber]{biblatex}
+\usepackage[style=numeric, backend=biber, sorting=none]{biblatex}
 \addbibresource{bibliography.bib}
 
 \setlength{\parindent}{0pt}
